--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
     implementation 'com.github.bumptech.glide:glide:4.13.1'
 
+    implementation 'io.insert-koin:koin-android:3.2.0'
+
     // Rx
     implementation "io.reactivex.rxjava3:rxjava:3.1.4"
     implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
